kibana/kibana-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
spec:
  type: LoadBalancer
  selector:
    app: kibana
  ports:
  - port: 5601
    nodePort: 31788
